# cockpit-tools

./: .gitignore  Cargo.toml  announcements.json  package.json
.github/workflows/: build-matrix.yml  platform-packages.yml
Casks/: cockpit-tools.rb
crates/cockpit-claude-adapter/: Cargo.toml
crates/cockpit-codebuddy-adapter/: Cargo.toml
crates/cockpit-codebuddy-cn-adapter/: Cargo.toml
crates/cockpit-codex-adapter/: Cargo.toml
crates/cockpit-codex-adapter/src/: main.rs
crates/cockpit-core/: Cargo.toml
crates/cockpit-core/src/models/: claude.rs  codex.rs  codex_local_access.rs  instance.rs  mod.rs
crates/cockpit-core/src/modules/: account.rs  antigravity_paths.rs  claude_account.rs  claude_desktop_gateway.rs  claude_instance.rs  codebuddy_account.rs  codebuddy_cn_account.rs  codebuddy_cn_instance.rs  codebuddy_instance.rs  codex_account.rs  codex_config_format.rs  codex_local_access.rs  codex_model_injector.rs  codex_model_provider.rs  codex_oauth.rs  codex_official_app_server.rs  codex_protocol.rs  codex_quota.rs  codex_session_file_time.rs  codex_session_manager.rs  codex_session_visibility.rs  codex_speed.rs  codex_wakeup.rs  codex_wakeup_scheduler.rs  config.rs  cursor_account.rs  cursor_instance.rs  db.rs  gemini_account.rs  gemini_instance.rs  github_copilot_account.rs  github_copilot_instance.rs  instance.rs  kiro_account.rs  kiro_instance.rs  logger.rs  mod.rs  openclaw_auth.rs  opencode_auth.rs  process.rs  (+11 more)
crates/cockpit-cursor-adapter/: Cargo.toml
crates/cockpit-gemini-adapter/: Cargo.toml
crates/cockpit-github-copilot-adapter/: Cargo.toml
crates/cockpit-kiro-adapter/: Cargo.toml
crates/cockpit-kiro-adapter/src/: main.rs
crates/cockpit-qoder-adapter/: Cargo.toml
crates/cockpit-trae-adapter/: Cargo.toml
crates/cockpit-windsurf-adapter/: Cargo.toml
crates/cockpit-workbuddy-adapter/: Cargo.toml
docs/: platform-hot-update-architecture.md  platform-integration-guide.md
platform-packages/: index.json  index.seed.json
platform-packages/claude_manager/: manifest.json
platform-packages/codebuddy/: manifest.json
platform-packages/codebuddy_cn/: manifest.json
platform-packages/codex/: manifest.json
platform-packages/cursor/: manifest.json
platform-packages/gemini/: manifest.json
platform-packages/github-copilot/: manifest.json
platform-packages/kiro/: manifest.json
platform-packages/qoder/: manifest.json
platform-packages/trae/: manifest.json
platform-packages/windsurf/: manifest.json
platform-packages/workbuddy/: manifest.json
platform-packages/zed/: manifest.json
scripts/: build-platform-package-index.cjs  build-platform-ui.cjs  package-platform-package.cjs  tauri-dev-app-runner.cjs  tauri-dev.cjs  tauri-dist-dev.cjs  verify-platform-packages.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.dev.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/src/: lib.rs
src/components/: AccountGroupModal.tsx  AnnouncementCenter.css  AnnouncementCenter.tsx  AutoSwitchAccountScopeSelector.tsx  CloseConfirmDialog.tsx  CodexAccountGroupModal.tsx  CodexGroupAccountPickerModal.tsx  CodexLocalAccessModal.tsx  CursorOverviewTabsHeader.tsx  ExportJsonModal.tsx  FileCorruptedModal.tsx  GeminiOverviewTabsHeader.tsx  GitHubCopilotOverviewTabsHeader.tsx  GlobalModal.tsx  GroupAccountPickerModal.tsx  GroupSettingsModal.tsx  InstancesManager.tsx  KiroOverviewTabsHeader.tsx  LogViewerModal.tsx  PlatformLayoutModal.tsx  PlatformPackageToolbar.css  PlatformPackageToolbar.tsx  PlatformPackageUnavailablePage.css  PlatformPackageUnavailablePage.tsx  QuickSettingsPopover.css  QuickSettingsPopover.tsx  SettingsAccountTransferSection.tsx  TagEditModal.tsx  UpdateNotification.tsx  VersionJumpNotification.tsx  WindsurfOverviewTabsHeader.tsx  ZedOverviewTabsHeader.tsx
src/hooks/: useAutoRefresh.ts  useProviderAccountsPage.ts
src/locales/: ar.json  cs.json  de.json  en-US.json  en.json  es.json  fr.json  id.json  it.json  ja.json  ko.json  pl.json  pt-br.json  ru.json  tr.json  vi.json  zh-CN.json  zh-tw.json
src/pages/: AccountsPage.tsx  ClaudeAccountsContent.tsx  ClaudeAccountsPage.tsx  ClaudeInstancesPage.tsx  CodexAccountsContent.tsx  (+32 more)
(+161 files in other folders)
