[package]
name = "cockpit-codex-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
cockpit-core = { path = "../cockpit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tiny_http = { workspace = true }
uuid = { workspace = true }
