[package]
name = "cockpit-kiro-adapter"
version = "0.1.0"
edition = "2021"
authors = ["jlcodes"]
license = "CC-BY-NC-SA-4.0"

[dependencies]
cockpit-core = { path = "../cockpit-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tiny_http.workspace = true
uuid.workspace = true
